syntax = "proto3";

import "aelf/options.proto";
import "aelf/core.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Contracts.Consensus.PoW";

service PoWContract {
    option (aelf.csharp_state) = "AElf.Contracts.Consensus.PoW.PoWContractState";
    
    rpc GetPowBlockHeaderExtraData (google.protobuf.Empty) returns (PowBlockHeaderExtraData) {
        option (aelf.is_view) = true;
    }
}

message PowBlockHeaderExtraData{
    uint32 nBits = 1;
    fixed64 Nonce = 2;
}